--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "postcss-nesting": "^13.0.1",
     "prettier": "^3.6.2",
     "transliteration": "^2.3.5",
-    "vitepress": "1.1.4",
-    "vitepress-plugin-tabs": "0.4.1",
+    "vitepress": "^1.6.3",
+    "vitepress-plugin-tabs": "^0.4.1",
     "vue": "^3.5.13",
     "vue3-carousel": "0.3.1",
     "x-satori": "0.1.5"
