--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@types/markdown-it": "^12.2.3",
     "@types/node": "^18.16.13",
     "dotenv": "^16.3.1",
-    "fast-glob": "^3.2.12",
     "gray-matter": "^4.0.3",
     "markdown-it": "^13.0.1",
     "markdown-it-container": "^3.0.0",
@@ -36,6 +35,7 @@
     "markdownlint-cli": "^0.34.0",
     "postcss-nesting": "^13.0.1",
     "prettier": "^3.6.2",
+    "tinyglobby": "^0.2.14",
     "transliteration": "^2.3.5",
     "vitepress": "^1.6.3",
     "vitepress-plugin-tabs": "^0.4.1",
