--- a/package.json
+++ b/package.json
@@ -21,26 +21,26 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@resvg/resvg-js": "2.4.1",
-    "@types/gtag.js": "0.0.14",
-    "@types/markdown-it": "^12.2.3",
-    "@types/node": "^18.16.13",
+    "@resvg/resvg-js": "^2.4.1",
+    "@types/gtag.js": "^0.0.20",
+    "@types/markdown-it": "^14.1.2",
+    "@types/node": "^24.0.13",
     "gray-matter": "^4.0.3",
-    "markdown-it": "^13.0.1",
-    "markdown-it-container": "^3.0.0",
-    "markdown-it-kbd": "^2.2.2",
+    "markdown-it": "^14.1.0",
+    "markdown-it-container": "^4.0.0",
+    "markdown-it-kbd": "^3.0.0",
     "markdown-it-shortcode-tag": "1.1.0",
     "markdownlint": "^0.29.0",
     "markdownlint-cli": "^0.34.0",
-    "postcss-nesting": "^13.0.1",
+    "postcss-nesting": "^13.0.2",
     "prettier": "^3.6.2",
     "tinyglobby": "^0.2.14",
     "transliteration": "^2.3.5",
     "vitepress": "^1.6.3",
-    "vitepress-plugin-tabs": "^0.4.1",
-    "vue": "^3.5.13",
-    "vue3-carousel": "0.3.1",
-    "x-satori": "0.1.5"
+    "vitepress-plugin-tabs": "^0.7.1",
+    "vue": "^3.5.17",
+    "vue3-carousel": "^0.3.1",
+    "x-satori": "^0.2.0"
   },
   "pnpm": {
     "peerDependencyRules": {
@@ -50,13 +50,13 @@
     }
   },
   "dependencies": {
-    "@octokit/rest": "20.0.2",
-    "@octokit/types": "12.0.0",
+    "@octokit/rest": "^20.0.2",
+    "@octokit/types": "^12.0.0",
     "@vueuse/core": "^10.3.0",
     "@vueuse/integrations": "^10.3.0",
     "dayjs": "^1.11.13",
     "glightbox": "^3.2.0",
-    "qrcode": "^1.5.3"
+    "qrcode": "^1.5.4"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "4.9.5"
