--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dev": "vitepress dev",
     "build": "vitepress build",
     "preview": "vitepress preview",
-    "lint": "markdownlint **/*.md --disable MD045",
+    "lint": "eslint .",
+    "lint:md": "markdownlint **/*.md --disable MD045",
     "format": "prettier --write ."
   },
   "devDependencies": {
@@ -26,6 +27,9 @@
     "@types/gtag.js": "^0.0.20",
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^24.8.1",
+    "eslint": "^9.38.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-vue": "^10.5.1",
     "gray-matter": "^4.0.3",
     "markdown-it": "^14.1.0",
     "markdown-it-container": "^4.0.0",
@@ -37,6 +41,7 @@
     "prettier": "^3.6.2",
     "tinyglobby": "^0.2.15",
     "transliteration": "^2.3.5",
+    "typescript-eslint": "^8.46.2",
     "vitepress": "^1.6.4",
     "vitepress-plugin-tabs": "^0.7.3",
     "vue": "^3.5.22",
