--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^24.8.1",
     "eslint": "^9.38.0",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-perfectionist": "^4.15.1",
     "eslint-plugin-vue": "^10.5.1",
     "gray-matter": "^4.0.3",
     "markdown-it": "^14.1.0",
